[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/GUI/BaseButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://CityPopupMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/GUI/PriceTag.tscn" type="PackedScene" id=4]

[node name="CityPopupMenu" type="Panel"]
margin_left = 1.0
margin_top = 498.0
margin_right = 1022.0
margin_bottom = 600.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireUpgrade" parent="." instance=ExtResource( 1 )]
margin_left = 19.6464
margin_top = 25.0
margin_right = 119.646
margin_bottom = 125.0
rect_scale = Vector2( 0.5, 0.5 )
cooldown = 1.0
texture_path = "res://assets/icons/cannon_shot_plus.png"
cost = 200

[node name="PriceTag" parent="FireUpgrade" instance=ExtResource( 4 )]
margin_left = 5.0
margin_top = 60.0
margin_right = 74.0
margin_bottom = 103.0
text = "200"

[node name="ArmorUpgrade" parent="." instance=ExtResource( 1 )]
margin_left = 90.0
margin_top = 25.0
margin_right = 190.0
margin_bottom = 125.0
rect_scale = Vector2( 0.5, 0.5 )
cooldown = 1.0
texture_path = "res://assets/icons/armor_plus.png"

[node name="PriceTag" parent="ArmorUpgrade" instance=ExtResource( 4 )]
margin_left = 5.0
margin_top = 60.0
margin_right = 74.0
margin_bottom = 103.0
text = "50"
[connection signal="button_pressed" from="FireUpgrade" to="." method="_on_FireUpgrade_button_pressed"]
[connection signal="button_pressed" from="ArmorUpgrade" to="." method="_on_ArmorUpgrade_button_pressed"]
